--- a/Khawi/Resources/ar.lproj/Localizable.strings
+++ b/Khawi/Resources/ar.lproj/Localizable.strings
@@ -42,8 +42,8 @@
 "Settings" = "الإعدادات";
 "Hello Brother" = "مرحبا خَوي";
 "Search for place" = "البحث عن مكان";
-"Joining Request" = "طلب إنضمام";
-"Delivery Request" = "طلب توصيل";
+"Joining Request" = "طلب إنشاء رحلة";
+"Delivery Request" = "طلب رحلة";
 "Current Orders" = "الطلبات الحالية";
 "Completed Orders" = "الطلبات المكتملة";
 "Cancelled Orders" = "الطلبات الملغية";
@@ -113,14 +113,15 @@
 "Finicial Transactions" = "المعاملات المالية";
 "Add Account" = "أضف رصيد";
 "Trip Title" = "عنوان الرحلة";
+"Trip Title Optional" = "عنوان الرحلة (اختياري)";
 "First Trip Date" = "تاريخ أول رحلة";
 "Maximum number of passengers per flight" = "الحد الأقصى للركاب في الرحلة";
 "Submit Join Request" = "تقديم طلب الانضمام";
 "Joining request created successfully" = "تم انشاء طلب الانضمام بنجاح";
 "Joining Requests" = "طلبات الانضمام";
 "Price" = "السعر";
-"Request Accept" = "قبول الطلب";
-"Request Reject" = "رفض الطلب";
+"Request Accept" = "قبول";
+"Request Reject" = "رفض";
 "Passengers Count" = "عدد الركاب";
 "Agree On" = "أوافق على";
 "Specify Destination On Map" = "حدد الوجهة على الخريطة";
@@ -169,3 +170,13 @@
 "Your country" = "بلدك";
 "Coupon" = "الكوبون";
 "Invite Friend" = "دعوة صديق";
+"Car Front Image" = "صورة امامية للسيارة";
+"Car Back Image" = "صورة خلفية للسيارة";
+"Car Right Image" = "صورة الجانب الايمن للسيارة";
+"Car Left Image" = "صورة الجانب الايسر للسيارة";
+"Identity Image" = "صورة الهوية";
+"License Image" = "صورة رخصة القيادة";
+"You don't have a car" = "ليس لديك سيارة";
+"Your account will be approved soon" = "سوف يتم تفعيل حسابك قريبا";
+"Call Info" = "معلومات الاتصال";
+"Click to call" = "اضغط للاتصال بالرقم";
